--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Assets and package-storage
+
+assets/production
+assets/snapshot
+assets/staging
+packages/production
+packages/snapshot
+packages/staging
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
