--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,17 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout assets
-        run: |
-          git worktree add assets/${{ matrix.package-storage-ref }}
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ matrix.package-storage-ref }}
+          path: assets/${{ matrix.package-storage-ref }}
+
+      - name: Checkout packages
+        uses: actions/checkout@v2
+        with:
+          repository: elastic/package-storage
+          ref: ${{ matrix.package-storage-ref }}
+          path: packages/${{ matrix.package-storage-ref }}
 
       - name: Setup Python
         uses: actions/setup-python@v2
@@ -59,28 +68,41 @@ jobs:
       - name: Install dependencies
         run: make prereq
 
-      - name: Checkout package-storage
-        uses: actions/checkout@v2
-        with:
-          repository: elastic/package-storage
-          ref: ${{ matrix.package-storage-ref }}
-          path: packages/${{ matrix.package-storage-ref }}
+      - name: Make an update plan
+        id: update-plan
+        run: |
+          echo "::set-output name=need-update::$(
+            if [ -n "$(python3 -m bot plan | tee /dev/stderr)" ]; then
+              echo yes
+            else
+              echo no
+            fi
+          )"
 
-      - name: Calculate diff
-        run: python3 -m bot diff
-
-  integrations:
-    name: Integrations
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Install elastic-package
+        if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
         run: |
           go install github.com/elastic/elastic-package@latest
           ~/go/bin/elastic-package version
 
       - name: Start the stack
+        if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
         run: ~/go/bin/elastic-package stack up -d
 
+      - name: Update assets
+        if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
+        run: |
+          git config --global user.name "The Elastic Assets Bot"
+          git config --global user.email "noreply@elastic.co"
+          export PATH=$PATH:~/go/bin
+          eval "$(elastic-package stack shellinit)"
+          python3 -m bot update
+
+      - name: Push assets
+        if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
+        run: |
+          git -C assets/${{ matrix.package-storage-ref }} push
+
       - name: Stop the stack
+        if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
         run: ~/go/bin/elastic-package stack down
