Add download helper to assets module

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ packages =
 package_dir =
     elastic.package.assets = assets
 install_requires =
+    requests_futures
     pygithub
     pyyaml
 python_requires = >=3.8.0
