--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,17 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        package-storage-ref: ["production"]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Checkout assets
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ matrix.package-storage-ref }}
+          path: assets/${{ matrix.package-storage-ref }}
 
       - name: Setup Python
         uses: actions/setup-python@v2
