CI use always latest stack

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -60,7 +60,13 @@ jobs:
 
       - name: Start the stack
         if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
-        run: ~/go/bin/elastic-package stack up -d
+        run: |
+          STACK_VERSION=`curl -s -H 'Accept: application/vnd.github+json' https://api.github.com/repos/elastic/elasticsearch/releases | \
+            jq -r '.[] .tag_name' | \
+            sort -V | \
+            tail -n1 | \
+            sed 's/v//'`
+          ~/go/bin/elastic-package stack up -d -v $STACK_VERSION
 
       - name: Update assets
         if: ${{ steps.update-plan.outputs.need-update == 'yes' }}
